[package]
name = "bl"
version = "0.1.0"
description = "Baselayer CLI — terminal interface to your knowledge vault"
authors = ["BaseLayer Labs LLC"]
edition = "2021"

[[bin]]
name = "bl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
dirs = "5"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
open = "5"
